fix: fix overlapping media queries.

--- a/src/sass/pages/dev-support.scss
+++ b/src/sass/pages/dev-support.scss
@@ -9,7 +9,7 @@
 
 @mixin phone_tablet_inbetween {
     //@media (max-width: 360px) { @content; }
-    @media (min-width: 480px) and (max-width: 767px) {
+    @media (min-width: 481px) and (max-width: 767px) {
         @content;
     }
 }
